# fpr

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  fpr.c  fpr_client.c  fpr_extender.c  fpr_handle.c  fpr_host.c  fpr_legacy.c  fpr_lts.c  fpr_new.c  fpr_security.c  fpr_security_handshake.c
docs/: API.md
examples/default/: CMakeLists.txt  sdkconfig
examples/default/main/: CMakeLists.txt  idf_component.yml  main.c
include/fpr/: fpr.h  fpr_client.h  fpr_config.h  fpr_def.h  fpr_extender.h  fpr_handle.h  fpr_host.h  fpr_legacy.h  fpr_lts.h  fpr_new.h  fpr_security.h  fpr_security_handshake.h
internal_include/fpr/internal/: helpers.h  private_defs.h
internal_src/: helpers.c
test/: CMakeLists.txt  DATA_SIZE_TEST_GUIDE.md  QUICK_START.md  README_TESTS.md  RECONNECT_TEST_GUIDE.md  REINITIALIZATION_FIX.md  USAGE_FROM_MAIN.md  test_fpr_client.c  test_fpr_client.h  test_fpr_data_sizes.c  test_fpr_data_sizes.h  test_fpr_extender.c  test_fpr_extender.h  test_fpr_host.c  test_fpr_host.h
